2007-03-16  Anand Babu  <ab@zresearch.com>

	* bmc-config/src/bmc-lan-conf-misc-section.c: Fixed incorrect
	return status check.

	* bmc-watchdog/Makefile.am: replaced 
	"$(top_srcdir)/install-sh" with "$(INSTALL)" and "$(DESTDIR)/"
	with "$(DESTDIR)".

	* ipmiconsole/src/libipmiconsole/Makefile.am: like wise.

	* freeipmi/ipmidetect/Makefile.am: like wise.

	* ipmimonitoring/src/libipmimonitoring/Makefile.am: like wise.

	* ipmimonitoring/Makefile.am: replaced install-data-local target
	with automake style macros.

	* Other changes are just compiler warning fixes like unused
	variable or referenced without initialization warning.
	

2007-03-15  Albert Chu <chu11@llnl.gov>

	* ipmiconsole/src/libipmiconsole/ipmiconsole_processing.c
	(_process_ctx): Fix output corner case.  Fix comment typo.

	* ipmiconsole/src/ipmiconsole/ipmiconsole.c (_set_mode_raw): Use
	TCSADRAIN instead of TCSAFLUSH to not automatically flush stdin if
	data exists on it.

	* ipmiconsole/src/ipmiconsole/ipmiconsole.c (main): Remove unused
	code.
	
2007-03-11  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/src/ipmi-locate-dmidecode.c: Replace u8, u16, u32,
	u64 typedefs with others, to protect against the possibility we
	collide with libc typedefs of the same name.
	
2007-03-08  Albert Chu <chu11@llnl.gov>

	* ipmimonitoring/src/ipmi_monitoring.h,
	ipmimonitoring/src/ipmi_monitoring.c,
	ipmimonitoring/src/ipmi_monitoring_defs.h: Do not lock memory by
	default.

	* ipmiconsole/: Do not lock memory by default.  Adjust -L option
	appropriately.
	
2007-03-07  Albert Chu <chu11@llnl.gov>

	* ipmiconsole/src/libipmiconsole/ipmiconsole_engine.c
	(_ipmiconsole_init_ctx_session): Return out of memory error on
	cbuf_create error.

	* ipmipower/ipmipower.8.in, ipmipower/src/ipmipower_config.c
	(ipmipower_config_cmdline_parse): Change -U option to -Z.

	* ipmipower/ipmipower.8.in, ipmipower/src/ipmipower_config.c
	(ipmipower_config_cmdline_parse), ipmiconsole/ipmiconsole.8.in,